# rational

./: .gitignore  Makefile.am  README.md  configure.ac  rational.pc.in
docs/: Doxyfile.in  Makefile.am
src/: Makefile.am
src/librational/: Makefile.am  cln_rational.h  expr_rational.h  gmp_rational.h  infint_rational.h  rational.h
src/rational/: Makefile.am  cln_rational.h  expr_rational.h  gmp_rational.h  infint_rational.h  rational.h  unlogical_rational.h
src/test/: Makefile.am  clntest.cpp  clntest.h  exprtest.cpp  exprtest.h  exprtest_cln.cpp  exprtest_cln.h  exprtest_infint.cpp  exprtest_infint.h  gausstest.cpp  gausstest.h  gmptest.cpp  gmptest.h  infinttest.cpp  infinttest.h  rationaltest.cpp  rationaltest.h  test_rational.cpp  unlogicaltest.cpp  unlogicaltest.h
